# mavlink2rest

./: .appveyor.yml  .gitignore  .travis.yml  Cargo.toml  Dockerfile  HOWTO-change-mavlink-msg.md  README.md  build.rs
.github/workflows/: deploy.yml  publish-docker.yml  test.yml
examples/: websocket_client.py
src/: cli.rs  data.rs  endpoints.rs  main.rs  mavftp.rs  mavlink_vehicle.rs  message_information.rs  rest_api.rs  server.rs  vehicle_handler.rs  websocket_manager.rs
src/html/: index.html  llm  watcher.html
src/mavftp/: cli.rs  controller.rs  main.rs  mavftp.rs
tests/: download_log_files.sh  output.txt  run.py
tests/logs/: ArduSub-test.tlog
