[package]
name = "mavlink2rest"
version = "0.9.0"
description = "A simple REST API for MAVLink"
readme = "README.md"
license = "MIT"
authors = ["Patrick José Pereira <patrickelectric@gmail.com>"]
edition = "2018"
path = "build.rs"

documentation = "https://github.com/patrickelectric/mavlink2rest"
homepage = "https://github.com/patrickelectric/mavlink2rest"
repository = "https://github.com/patrickelectric/mavlink2rest"

[[bin]]
bench = false
path = "src/main.rs"
name = "mavlink2rest"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-cors = "0.2.0"
actix-rt = "1.1.1"
actix-web = "2.0.0"
actix-web-actors = "2.0.0"
chrono = { version = "0.4", features = ["serde"] }
clap = "2.33.3"
mavlink = { version = "0.8.5", features = [ "emit-extensions", "ardupilotmega"] }
regex = "1"
serde = "1.0.115"
serde_json = "1.0.57"
serde_derive = "1.0.115"
vergen = "3"

[build-dependencies]
vergen = "3"
