[package]
name = "mavlink2rest"
version = "0.11.16"
description = "A simple REST API for MAVLink"
readme = "README.md"
license = "MIT"
authors = ["Patrick José Pereira <patrickelectric@gmail.com>"]
edition = "2018"
path = "build.rs"

documentation = "https://github.com/patrickelectric/mavlink2rest"
homepage = "https://github.com/patrickelectric/mavlink2rest"
repository = "https://github.com/patrickelectric/mavlink2rest"

[[bin]]
bench = false
path = "src/main.rs"
name = "mavlink2rest"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-cors = "0.5"
actix-files = "0.6.2"
actix-rt = "2.1"
actix-web = "3.3"
actix-web-actors = "3.0"
chrono = { version = "0.4", features = ["serde"] }
clap = "2.33.3"
derivative = "2.1.1"
include_dir = "0.7"
lazy_static = "1.4.0"
log = "0.4"
env_logger = "0.8"
mavlink = { version = "0.10.4", features = [ "ardupilotmega", "emit-extensions"] }
paperclip = { git = "https://github.com/patrickelectric/paperclip", branch = "patrick-swagger", features = ["actix", "swagger-ui"] }
regex = "1"
serde = "1.0.115"
serde_derive = "1.0.115"
serde_json = "1.0.57"
json5 = "0.4.1"

[build-dependencies]
reqwest = {version = "0.11", default-features = false, features = ["blocking", "rustls-tls"]}
vergen = { version = "7", features = ["git"] }
